Añdiendo el croosOver con Un poco de historia

--- a/angularHEFE/src/app/components/vr/museum/scene-museum/scene-museum.component.html
+++ b/angularHEFE/src/app/components/vr/museum/scene-museum/scene-museum.component.html
@@ -159,15 +159,6 @@
         light="color: #ffffff; intensity: 2; type: point; distance: 2.5"></a-entity>
     </a-entity>
 
-    <a-entity id="robotMantenice" position="15 0 -5" scale="1 1.2 1" rotation="0 90 0">
-      <a-image src="#robotSad" width="3" height="1.5" position="2 -0.522 -2.799" material="" geometry="">
-      </a-image>
-
-      <a-entity text="font: https://cdn.aframe.io/fonts/Monoid.fnt; value: Estamos en Mantenimiento, vuelve pronto para
-                tu primer paseo; align: center; wrapCount: 35; width: 5;" position="2 0.850 -2.79" rotation="0 180 0"
-        scale="1.2 1.2 1" rotation="0 180 0"></a-entity>
-    </a-entity>
-
     <a-entity id="abtractionComputer" position="0 0 -12">
       <a-light id="lightSphere" type="spot" decay="3" distance="20" intensity="0" penumbra="0.1"
         position="-0.01961 1.23176 0" visible="true" mixin="ligthIntesity">
@@ -198,4 +189,88 @@
       <a-gltf-model id="modelTv2" position="1.4 1.5 -6" rotation="0 180 0" src="#tv" scale="3 2.5 1"></a-gltf-model>
     </a-entity>
     
+
+    <a-entity id="containerFrameMuseum" position="0 -0.11 -3.687">
+
+      <a-gltf-model id="modelFrame" position="8.6 0 0" rotation="0 180 0" src="#framePhoto">
+        <a-light id="lightSphere" type="spot" decay="3" distance="20" intensity="0" penumbra="0.1"
+          position="0.086 0.262 2.70" visible="true" mixin="ligthIntesity">
+          <a-entity geometry="primitive: cone; radiusBottom: 0.52; radiusTop: 0.12" id="forma"
+            material="shader: flat; opacity: 0.5" position="-0.04 1.23868 -0.57" rotation="50 0 0"></a-entity>
+        </a-light>
+        <a-image src="#to220" width="1.650" height="1.9" position="0 0 0.103" material="" geometry="">
+        </a-image>
+      </a-gltf-model>
+
+      <a-gltf-model id="modelFrame" position="12 0 0" rotation="0 180 0" src="#framePhoto">
+        <a-light id="lightSphere" type="spot" decay="3" distance="20" intensity="0" penumbra="0.1"
+          position="0.086 0.262 2.70" visible="false" mixin="ligthIntesity">
+          <a-entity geometry="primitive: cone; radiusBottom: 0.52; radiusTop: 0.12" id="forma"
+            material="shader: flat; opacity: 0.5" position="-0.04 1.23868 -0.57" rotation="50 0 0"></a-entity>
+        </a-light>
+        <a-image src="#ctsv" width="1.650" height="1.9" position="0 0 0.103" material="" geometry="">
+        </a-image>
+      </a-gltf-model>
+
+      <a-gltf-model id="modelFrame" position="16 0 0" rotation="0 180 0" src="#framePhoto">
+        <a-light id="lightSphere" type="spot" decay="3" distance="20" intensity="0" penumbra="0.1"
+          position="0.086 0.262 2.70" visible="false" mixin="ligthIntesity">
+          <a-entity geometry="primitive: cone; radiusBottom: 0.52; radiusTop: 0.12" id="forma"
+            material="shader: flat; opacity: 0.5" position="-0.04 1.23868 -0.57" rotation="50 0 0"></a-entity>
+        </a-light>
+        <a-image src="#oblea" width="1.650" height="1.9" position="0 0 0.103" material="" geometry="">
+        </a-image>
+      </a-gltf-model>
+
+      <a-gltf-model id="modelFrame" position="20 0 0" rotation="0 180 0" src="#framePhoto">
+        <a-light id="lightSphere" type="spot" decay="3" distance="20" intensity="0" penumbra="0.1"
+          position="0.086 0.262 2.70" visible="false" mixin="ligthIntesity">
+          <a-entity geometry="primitive: cone; radiusBottom: 0.52; radiusTop: 0.12" id="forma"
+            material="shader: flat; opacity: 0.5" position="-0.04 1.23868 -0.57" rotation="50 0 0"></a-entity>
+        </a-light>
+        <a-image src="#hpJornada" width="1.650" height="1.9" position="0 0 0.103" material="" geometry="">
+        </a-image>
+      </a-gltf-model>
+
+      <a-gltf-model id="modelFrame" position="24 0 0" rotation="0 180 0" src="#framePhoto">
+        <a-light id="lightSphere" type="spot" decay="3" distance="20" intensity="0" penumbra="0.1"
+          position="0.086 0.262 2.70" visible="false" mixin="ligthIntesity">
+          <a-entity geometry="primitive: cone; radiusBottom: 0.52; radiusTop: 0.12" id="forma"
+            material="shader: flat; opacity: 0.5" position="-0.04 1.23868 -0.57" rotation="50 0 0"></a-entity>
+        </a-light>
+        <a-image src="#toshLibretto" width="1.650" height="1.9" position="0 0 0.103" material="" geometry="">
+        </a-image>
+      </a-gltf-model>
+
+      <a-gltf-model id="modelFrame" position="28 0 0" rotation="0 180 0" src="#framePhoto">
+        <a-light id="lightSphere" type="spot" decay="3" distance="20" intensity="0" penumbra="0.1"
+          position="0.086 0.262 2.70" visible="false" mixin="ligthIntesity">
+          <a-entity geometry="primitive: cone; radiusBottom: 0.52; radiusTop: 0.12" id="forma"
+            material="shader: flat; opacity: 0.5" position="-0.04 1.23868 -0.57" rotation="50 0 0"></a-entity>
+        </a-light>
+        <a-image src="#disk1541" width="1.650" height="1.9" position="0 0 0.103" material="" geometry="">
+        </a-image>
+      </a-gltf-model>
+
+      <a-gltf-model id="modelFrame" position="32 0 0" rotation="0 180 0" src="#framePhoto">
+        <a-light id="lightSphere" type="spot" decay="3" distance="20" intensity="0" penumbra="0.1"
+          position="0.086 0.262 2.70" visible="false" mixin="ligthIntesity">
+          <a-entity geometry="primitive: cone; radiusBottom: 0.52; radiusTop: 0.12" id="forma"
+            material="shader: flat; opacity: 0.5" position="-0.04 1.23868 -0.57" rotation="50 0 0"></a-entity>
+        </a-light>
+        <a-image src="#txPc" width="1.650" height="1.9" position="0 0 0.103" material="" geometry="">
+        </a-image>
+      </a-gltf-model>
+
+      <a-gltf-model id="modelFrame" position="36 0 0" rotation="0 180 0" src="#framePhoto">
+        <a-light id="lightSphere" type="spot" decay="3" distance="20" intensity="0" penumbra="0.1"
+          position="0.086 0.262 2.70" visible="false" mixin="ligthIntesity">
+          <a-entity geometry="primitive: cone; radiusBottom: 0.52; radiusTop: 0.12" id="forma"
+            material="shader: flat; opacity: 0.5" position="-0.04 1.23868 -0.57" rotation="50 0 0"></a-entity>
+        </a-light>
+        <a-image src="#dnsSV" width="1.650" height="1.9" position="0 0 0.103" material="" geometry="">
+        </a-image>
+      </a-gltf-model>
+    </a-entity>
+
 </a-scene>
