--- a/angularHEFE/src/app/components/vr/museum/assets-museum/assets-museum.component.html
+++ b/angularHEFE/src/app/components/vr/museum/assets-museum/assets-museum.component.html
@@ -1,11 +1,24 @@
 <a-asset-item id="museo" src="../../../../../assets/images/museum/museum2.glb"></a-asset-item>
 <a-asset-item id="tv" src="../../../../../assets/images/museum/tv.glb"></a-asset-item>
+<a-asset-item id="framePhoto" src="../../../../../assets/images/museum/marcoPhoto.glb"></a-asset-item>
+
 <a-asset id="robot" src="../../../../../assets/images/museum/robot.png"></a-asset>
 <a-asset id="startTravel" src="../../../../../assets/images/museum/enviar.svg"></a-asset>
 <a-asset id="exit" src="../../../../../assets/images/museum/exit.svg"></a-asset>
 <a-asset id="ballon" src="../../../../../assets/images/museum/ballonMessaje.svg"></a-asset>
-<a-asset id="robotSad" src="../../../../../assets/images/museum/robotSad.png"></a-asset>
 <a-asset id="texturaprueba" src="../../../../../assets/images/museum/textura2.png"></a-asset>
+
+<!--IMAGENES DE LOS CUADROS DEL MUSEO UN POCO DE TODO-->
+<a-asset id="to220" src="../../../../../assets/images/museum/abtraction/to-220.jpg"></a-asset>
+<a-asset id="ctsv" src="../../../../../assets/images/museum/abtraction/ct-sv.jpg"></a-asset>
+<a-asset id="oblea" src="../../../../../assets/images/museum/abtraction/oblea.jpg"></a-asset>
+<a-asset id="hpJornada" src="../../../../../assets/images/museum/abtraction/hp-jornada.jpg"></a-asset>
+<a-asset id="toshLibretto" src="../../../../../assets/images/museum/abtraction/toshibaLibretto.jpg"></a-asset>
+<a-asset id="disk1541" src="../../../../../assets/images/museum/abtraction/disco-1541.jpg"></a-asset>
+<a-asset id="txPc" src="../../../../../assets/images/museum/abtraction/txInstrumenPC.jpg"></a-asset>
+<a-asset id="dnsSV" src="../../../../../assets/images/museum/abtraction/dns.jpg"></a-asset>
+
+
 <a-asset id="object" src="../../../../../assets/images/museum/objectsPrueba.glb"></a-asset>
 <a-asset id="laptop" src="../../../../../assets/images/museum/laptop.glb"></a-asset>
 <a-asset id="mouse" src="../../../../../assets/images/museum/mouse.glb"></a-asset>
