Arreglo visual del muse, añadimos el pilar y parche al museo

--- a/angularHEFE/src/app/components/vr/museum/assets-museum/assets-museum.component.html
+++ b/angularHEFE/src/app/components/vr/museum/assets-museum/assets-museum.component.html
@@ -22,6 +22,7 @@
 <a-asset id="object" src="../../../../../assets/images/museum/objectsPrueba.glb"></a-asset>
 <a-asset id="laptop" src="../../../../../assets/images/museum/laptop.glb"></a-asset>
 <a-asset id="mouse" src="../../../../../assets/images/museum/mouse.glb"></a-asset>
+<a-asset id="pilar3D" src="../../../../../assets/images/museum/pilar.glb"></a-asset>
 
 <a-asset id="guided" src="../../../../../assets/images/museum/guided.svg"></a-asset>
 <a-asset id="travelComplete" src="../../../../../assets/images/museum/travelFree.svg"></a-asset>
