--- a/angularHEFE/src/app/components/vr/museum/scene-museum/scene-museum.component.html
+++ b/angularHEFE/src/app/components/vr/museum/scene-museum/scene-museum.component.html
@@ -10,21 +10,21 @@
     </a-gltf-model>
     <a-sky id="skyMuseo" color="#0a0d1f"></a-sky>
 
-    <a-light id="ligthAmbient" type="ambient" color="#3f6288" intensity="0" visible="true" mixin="lightAmbientOn">
+    <a-light id="ligthAmbient" type="ambient" color="#3792fb" intensity="0" visible="true" mixin="lightAmbientOn">
     </a-light>
 
-    <a-light id="ligthOff" type="ambient" color="#0a1524" mixin="lightAmbientOff"></a-light>
+    <a-light id="ligthOff" type="ambient" color="#16263b" mixin="lightAmbientOff"></a-light>
 
 
     <a-entity id="focoRobot" position="2.355 -1.259 -2.799"
       light="color: #22f789; intensity: 21.23; type: point; distance: 2.33; decay: 2" visible=""
       animation__visible="property: visible; to: false; startEvents: start; easing: easeInOutCubic; autoplay:
-      false"></a-entity>
+      false; delay: 2500;"></a-entity>
 
     <a-entity id="focoMenu" position="-2 -1.259 -2.799"
       light="color: #22f789; intensity: 21.23; type: point; distance: 2.33; decay: 2" visible=""
       animation__visible="property: visible; to: false; startEvents: start; easing: easeInOutCubic; autoplay:
-      false"></a-entity>
+      false; delay: 2500;"></a-entity>
 
     <a-entity id="contentRobot" position="0.209 0 -2.799">
       <a-entity id="lblBanner"
@@ -183,11 +183,10 @@
         <a-entity geometry="primitive: cone; radiusBottom: 0.52; radiusTop: 0.12" id="forma"
           material="shader: flat; opacity: 0.5" position="-0.04 1.23868 -0.57" rotation="50 0 0"></a-entity>
       </a-light>
-      <a-entity id="pilar" geometry="primitive: cylinder; height: 2.760; segmentsHeight: 17; radius: 0.46"
-        material="shader: flat; color: #fff" position="-0.088 -2.04 -5">
+      <a-gltf-model id="pilar" src="#pilar3D" position="-0.088 -3.48 -5" scale="1 1.3 1">
         <a-gltf-model id="computer" mixin="rotationObj" src="#laptop"
-          position="0 2 0" scale="0.4 0.4 0.4" rotation="0 90 0"></a-gltf-model>
-      </a-entity>
+          position="0 2.6 0" scale="0.4 0.4 0.4" rotation="0 90 0"></a-gltf-model>
+      </a-gltf-model>
       <a-gltf-model id="modelTv" position="-1.60 1.5 -6" rotation="0 180 0" src="#tv" scale="3 2.5 1"></a-gltf-model>
       <a-gltf-model id="modelTv2" position="1.4 1.5 -6" rotation="0 180 0" src="#tv" scale="3 2.5 1"></a-gltf-model>
     </a-entity>
@@ -220,7 +219,7 @@
         </a-image>
       </a-gltf-model>
 
-      <a-gltf-model id="modelFrame" position="12 0 0" rotation="0 180 0" src="#framePhoto">
+      <a-gltf-model id="modelFrame" position="13 0 0" rotation="0 180 0" src="#framePhoto">
         <a-light id="lightSphere" type="spot" decay="3" distance="20" intensity="0" penumbra="0.1"
           position="0.086 0.262 2.70" visible="false" mixin="ligthIntesity">
           <a-entity geometry="primitive: cone; radiusBottom: 0.52; radiusTop: 0.12" id="forma"
@@ -230,7 +229,7 @@
         </a-image>
       </a-gltf-model>
 
-      <a-gltf-model id="modelFrame" position="16 0 0" rotation="0 180 0" src="#framePhoto">
+      <a-gltf-model id="modelFrame" position="18 0 0" rotation="0 180 0" src="#framePhoto">
         <a-light id="lightSphere" type="spot" decay="3" distance="20" intensity="0" penumbra="0.1"
           position="0.086 0.262 2.70" visible="false" mixin="ligthIntesity">
           <a-entity geometry="primitive: cone; radiusBottom: 0.52; radiusTop: 0.12" id="forma"
@@ -240,7 +239,7 @@
         </a-image>
       </a-gltf-model>
 
-      <a-gltf-model id="modelFrame" position="20 0 0" rotation="0 180 0" src="#framePhoto">
+      <a-gltf-model id="modelFrame" position="23 0 0" rotation="0 180 0" src="#framePhoto">
         <a-light id="lightSphere" type="spot" decay="3" distance="20" intensity="0" penumbra="0.1"
           position="0.086 0.262 2.70" visible="false" mixin="ligthIntesity">
           <a-entity geometry="primitive: cone; radiusBottom: 0.52; radiusTop: 0.12" id="forma"
@@ -250,7 +249,7 @@
         </a-image>
       </a-gltf-model>
 
-      <a-gltf-model id="modelFrame" position="24 0 0" rotation="0 180 0" src="#framePhoto">
+      <a-gltf-model id="modelFrame" position="28 0 0" rotation="0 180 0" src="#framePhoto">
         <a-light id="lightSphere" type="spot" decay="3" distance="20" intensity="0" penumbra="0.1"
           position="0.086 0.262 2.70" visible="false" mixin="ligthIntesity">
           <a-entity geometry="primitive: cone; radiusBottom: 0.52; radiusTop: 0.12" id="forma"
@@ -260,7 +259,7 @@
         </a-image>
       </a-gltf-model>
 
-      <a-gltf-model id="modelFrame" position="28 0 0" rotation="0 180 0" src="#framePhoto">
+      <a-gltf-model id="modelFrame" position="33 0 0" rotation="0 180 0" src="#framePhoto">
         <a-light id="lightSphere" type="spot" decay="3" distance="20" intensity="0" penumbra="0.1"
           position="0.086 0.262 2.70" visible="false" mixin="ligthIntesity">
           <a-entity geometry="primitive: cone; radiusBottom: 0.52; radiusTop: 0.12" id="forma"
@@ -270,7 +269,7 @@
         </a-image>
       </a-gltf-model>
 
-      <a-gltf-model id="modelFrame" position="32 0 0" rotation="0 180 0" src="#framePhoto">
+      <a-gltf-model id="modelFrame" position="38 0 0" rotation="0 180 0" src="#framePhoto">
         <a-light id="lightSphere" type="spot" decay="3" distance="20" intensity="0" penumbra="0.1"
           position="0.086 0.262 2.70" visible="false" mixin="ligthIntesity">
           <a-entity geometry="primitive: cone; radiusBottom: 0.52; radiusTop: 0.12" id="forma"
@@ -280,7 +279,7 @@
         </a-image>
       </a-gltf-model>
 
-      <a-gltf-model id="modelFrame" position="36 0 0" rotation="0 180 0" src="#framePhoto">
+      <a-gltf-model id="modelFrame" position="43 0 0" rotation="0 180 0" src="#framePhoto">
         <a-light id="lightSphere" type="spot" decay="3" distance="20" intensity="0" penumbra="0.1"
           position="0.086 0.262 2.70" visible="false" mixin="ligthIntesity">
           <a-entity geometry="primitive: cone; radiusBottom: 0.52; radiusTop: 0.12" id="forma"
@@ -291,4 +290,6 @@
       </a-gltf-model>
     </a-entity>
 
+    <!--Parches al museo-->
+    <a-entity id="muro" position="53.50 0 -19.55" geometry="primitive: box" scale="115 9 1" material="shader: standard; color: #153ab6"></a-entity>
 </a-scene>
