Configuracion de recorrido Parte 1

--- a/angularHEFE/src/app/components/vr/museum/assets-museum/assets-museum.component.html
+++ b/angularHEFE/src/app/components/vr/museum/assets-museum/assets-museum.component.html
@@ -17,6 +17,7 @@
 <a-asset id="disk1541" src="../../../../../assets/images/museum/abtraction/disco-1541.jpg"></a-asset>
 <a-asset id="txPc" src="../../../../../assets/images/museum/abtraction/txInstrumenPC.jpg"></a-asset>
 <a-asset id="dnsSV" src="../../../../../assets/images/museum/abtraction/dns.jpg"></a-asset>
+<a-asset id="nextFrame" src="../../../../../assets/images/museum/abtraction/next.svg"></a-asset>
 
 
 <a-asset id="object" src="../../../../../assets/images/museum/objectsPrueba.glb"></a-asset>
