--- a/angularHEFE/src/app/components/vr/museum/scene-museum/scene-museum.component.html
+++ b/angularHEFE/src/app/components/vr/museum/scene-museum/scene-museum.component.html
@@ -206,20 +206,32 @@
       <a-gltf-model id="modelTv2" position="1.4 1.5 -6" rotation="0 180 0" src="#tv" scale="3 2.5 1"></a-gltf-model>
     </a-entity>
     
-
     <a-entity id="containerFrameMuseum" position="0 -0.11 -3.687">
+      <a-image id="ArrowFrame" src="#nextFrame" rotation="0 180 0" position="9.73 1.9 -1" scale="0.8 0.8 1" material=""
+        geometry="height:0.4; width:0.4;" (animationcomplete__hidden)="nextFrame()" mixin="scaleDown scaleUp"
+        animation__hidden="property: position; to: 50 1.9 1; startEvents: click;
+        dur: 1000; easing: easeInOutCubic; autoplay: false;"
+      >
+        <a-entity id="lblArrowFrame" text="font: https://cdn.aframe.io/fonts/mozillavr.fnt; value: Siguiente; align: center; width: 4"
+          position="0 0.5 0"
+          ></a-entity>
+      </a-image>
 
       <a-gltf-model id="modelFrame" position="8.6 0 0" rotation="0 180 0" src="#framePhoto">
+        <a-entity id="titleFrame"
+          text="font: https://cdn.aframe.io/fonts/Monoid.fnt; value: Regulador de Voltaje TO-220; width: 4; align: center;"
+          position="0 1.6 1" rotation=""></a-entity>
         <a-light id="lightSphere" type="spot" decay="3" distance="20" intensity="0" penumbra="0.1"
           position="0.086 0.262 2.70" visible="true" mixin="ligthIntesity">
-          <a-entity geometry="primitive: cone; radiusBottom: 0.52; radiusTop: 0.12" id="forma"
-            material="shader: flat; opacity: 0.5" position="-0.04 1.23868 -0.57" rotation="50 0 0"></a-entity>
         </a-light>
         <a-image src="#to220" width="1.650" height="1.9" position="0 0 0.103" material="" geometry="">
         </a-image>
       </a-gltf-model>
 
       <a-gltf-model id="modelFrame" position="13 0 0" rotation="0 180 0" src="#framePhoto">
+        <a-entity id="titleFrame"
+          text="font: https://cdn.aframe.io/fonts/Monoid.fnt; value: Circuitos Integrados SV; width: 4; align: center;"
+          position="0 1.6 1" rotation=""></a-entity>
         <a-light id="lightSphere" type="spot" decay="3" distance="20" intensity="0" penumbra="0.1"
           position="0.086 0.262 2.70" visible="false" mixin="ligthIntesity">
           <a-entity geometry="primitive: cone; radiusBottom: 0.52; radiusTop: 0.12" id="forma"
@@ -230,6 +242,9 @@
       </a-gltf-model>
 
       <a-gltf-model id="modelFrame" position="18 0 0" rotation="0 180 0" src="#framePhoto">
+        <a-entity id="titleFrame"
+          text="font: https://cdn.aframe.io/fonts/Monoid.fnt; value: Oblea (Wafer); width: 4; align: center;"
+          position="0 1.6 1" rotation=""></a-entity>
         <a-light id="lightSphere" type="spot" decay="3" distance="20" intensity="0" penumbra="0.1"
           position="0.086 0.262 2.70" visible="false" mixin="ligthIntesity">
           <a-entity geometry="primitive: cone; radiusBottom: 0.52; radiusTop: 0.12" id="forma"
@@ -240,6 +255,9 @@
       </a-gltf-model>
 
       <a-gltf-model id="modelFrame" position="23 0 0" rotation="0 180 0" src="#framePhoto">
+        <a-entity id="titleFrame"
+          text="font: https://cdn.aframe.io/fonts/Monoid.fnt; value: HP Jornada; width: 4; align: center;"
+          position="0 1.6 1" rotation=""></a-entity>
         <a-light id="lightSphere" type="spot" decay="3" distance="20" intensity="0" penumbra="0.1"
           position="0.086 0.262 2.70" visible="false" mixin="ligthIntesity">
           <a-entity geometry="primitive: cone; radiusBottom: 0.52; radiusTop: 0.12" id="forma"
@@ -250,6 +268,9 @@
       </a-gltf-model>
 
       <a-gltf-model id="modelFrame" position="28 0 0" rotation="0 180 0" src="#framePhoto">
+        <a-entity id="titleFrame"
+          text="font: https://cdn.aframe.io/fonts/Monoid.fnt; value: Toshiba Libretto 110CT; width: 4; align: center;"
+          position="0 1.6 1" rotation=""></a-entity>
         <a-light id="lightSphere" type="spot" decay="3" distance="20" intensity="0" penumbra="0.1"
           position="0.086 0.262 2.70" visible="false" mixin="ligthIntesity">
           <a-entity geometry="primitive: cone; radiusBottom: 0.52; radiusTop: 0.12" id="forma"
@@ -260,6 +281,9 @@
       </a-gltf-model>
 
       <a-gltf-model id="modelFrame" position="33 0 0" rotation="0 180 0" src="#framePhoto">
+        <a-entity id="titleFrame"
+          text="font: https://cdn.aframe.io/fonts/Monoid.fnt; value: Unidad de Disco 1541; width: 4; align: center;"
+          position="0 1.6 1" rotation=""></a-entity>
         <a-light id="lightSphere" type="spot" decay="3" distance="20" intensity="0" penumbra="0.1"
           position="0.086 0.262 2.70" visible="false" mixin="ligthIntesity">
           <a-entity geometry="primitive: cone; radiusBottom: 0.52; radiusTop: 0.12" id="forma"
@@ -270,6 +294,9 @@
       </a-gltf-model>
 
       <a-gltf-model id="modelFrame" position="38 0 0" rotation="0 180 0" src="#framePhoto">
+        <a-entity id="titleFrame"
+          text="font: https://cdn.aframe.io/fonts/Monoid.fnt; value:Portatil de Texas Instruments; width: 4; align: center;"
+          position="0 1.6 1" rotation=""></a-entity>
         <a-light id="lightSphere" type="spot" decay="3" distance="20" intensity="0" penumbra="0.1"
           position="0.086 0.262 2.70" visible="false" mixin="ligthIntesity">
           <a-entity geometry="primitive: cone; radiusBottom: 0.52; radiusTop: 0.12" id="forma"
@@ -280,6 +307,9 @@
       </a-gltf-model>
 
       <a-gltf-model id="modelFrame" position="43 0 0" rotation="0 180 0" src="#framePhoto">
+        <a-entity id="titleFrame"
+          text="font: https://cdn.aframe.io/fonts/Monoid.fnt; value:Primer Servidor DNS de El Salvador; width: 4; align: center;"
+          position="0 1.6 1" rotation=""></a-entity>
         <a-light id="lightSphere" type="spot" decay="3" distance="20" intensity="0" penumbra="0.1"
           position="0.086 0.262 2.70" visible="false" mixin="ligthIntesity">
           <a-entity geometry="primitive: cone; radiusBottom: 0.52; radiusTop: 0.12" id="forma"
@@ -289,6 +319,7 @@
         </a-image>
       </a-gltf-model>
     </a-entity>
+
 
     <!--Parches al museo-->
     <a-entity id="muro" position="53.50 0 -19.55" geometry="primitive: box" scale="115 9 1" material="shader: standard; color: #153ab6"></a-entity>
