--- a/angularHEFE/src/app/components/vr/museum/assets-museum/assets-museum.component.html
+++ b/angularHEFE/src/app/components/vr/museum/assets-museum/assets-museum.component.html
@@ -7,6 +7,8 @@
 <a-asset id="exit" src="../../../../../assets/images/museum/exit.svg"></a-asset>
 <a-asset id="ballon" src="../../../../../assets/images/museum/ballonMessaje.svg"></a-asset>
 <a-asset id="texturaprueba" src="../../../../../assets/images/museum/textura2.png"></a-asset>
+<a-asset id="shaderUphxEfe" src="../../../../../assets/images/museum/uphxEfe.png"></a-asset>
+<a-asset id="shaderGeneracion" src="../../../../../assets/images/museum/generacionPc.png"></a-asset>
 
 <!--IMAGENES DE LOS CUADROS DEL MUSEO UN POCO DE TODO-->
 <a-asset id="to220" src="../../../../../assets/images/museum/abtraction/to-220.jpg"></a-asset>
@@ -39,7 +41,7 @@
         easeInOutElastic; startEvents: mouseenter; pauseEvents: mouseleave; resumeEvents: "></a-mixin>
 <a-mixin id="hiddenMenu" animation__hiddenmenu="property: position; to: 1.3 -3 2; startEvents: start;
             dur: 1000; easing: easeInOutCubic; autoplay: false; delay: 500"></a-mixin>
-<a-mixin id="menuInvisible" animation__menuvisible="property: visible; to: false; startEvents: animationcomplete__hiddenmenu;
+<a-mixin id="menuInvisible" animation__menuvisible="property: visible; to: false; startEvents: start;
             dur: 1000; easing: easeInOutCubic; autoplay: false; delay: 500"></a-mixin>
 <a-mixin id="rotationObj" animation__rotate="property: rotation; to: 0 450 0;
             dur: 3000; easing: easeInOutCubic; autoplay: true; loop: true;"></a-mixin>
@@ -51,3 +53,10 @@
             dur: 1000; easing: easeInOutCubic; autoplay: false;"></a-mixin>
 <a-mixin id="lightAmbientOff" animation__intesityoff="property: intensity; to: 0; startEvents: start;
             dur: 1000; easing: easeInOutCubic; autoplay: false;"></a-mixin>
+
+<a-mixin id="scaleDownCard"
+  animation__scaledown="property: scale; from: 1.50 0.85 1; to: 1.40 0.75 1; dur: 100; autoplay: false; easing:
+    easeInOutCubic; startEvents: mouseleave; pauseEvents: mouseenter; resumeEvents: "></a-mixin>
+<a-mixin id="scaleUpCard"
+  animation__scaleup="property: scale; from: 1.40 0.75 1; to: 1.50 0.85 1; dur: 100; autoplay: false; easing:
+    easeInOutElastic; startEvents: mouseenter; pauseEvents: mouseleave; resumeEvents: "></a-mixin>
