--- a/angularHEFE/src/app/components/vr/museum/scene-museum/scene-museum.component.html
+++ b/angularHEFE/src/app/components/vr/museum/scene-museum/scene-museum.component.html
@@ -29,7 +29,7 @@
     <a-entity id="contentRobot" position="0.209 0 -2.799">
       <a-entity id="lblBanner"
         text="font: https://cdn.aframe.io/fonts/Monoid.fnt; value: BIENVENIDO AL MUSEO DE HIPEREFE; align: center; width: 6"
-        position="0 1.5 0" rotation="" 
+        position="-0.34 2.107 0" rotation="" 
         animation__hidden="property: position; to: 1.3 -3 2; startEvents: visitGuided;
         dur: 1000; easing: easeInOutCubic; autoplay: false;"
         animation__visible="property: visible; to: false; startEvents: animationcomplete__hidden; easing:
@@ -37,109 +37,30 @@
         autoplay: false"></a-entity>
 
       <a-entity id="question"
-        text="font: https://cdn.aframe.io/fonts/Monoid.fnt; value: Como quieres realizar tu visita?; width: 4; align: center;"
-        position="0 1.2 0" rotation="" material="opacity:0" 
+        text="font: https://cdn.aframe.io/fonts/Monoid.fnt; value: Que quieres conocer?; width: 4; align: center;"
+        position="-0.34 1.660 0" rotation="" material="opacity:0" 
         animation__hidden="property: position; to: 0 1.5 0; startEvents: visitGuided;
                 dur: 1000; easing: easeInOutCubic; autoplay: false;"></a-entity>
     </a-entity>
-    <a-image id="imgRobot" src="#robot" width="3" height="1.5" position="0 -0.67227 -2.799" material="" geometry=""
-      animation__moveleft="property: position; to: -1 -0.67227 -2.799; startEvents: visitGuided;
-        dur: 1000; easing: easeInOutCubic; autoplay: false;" 
-        animation__show1="property: position; to: 1.5 -0.91 -17; startEvents: start;
-        dur: 1000; easing: easeInOutCubic; autoplay: false; delay: 4500;"></a-image>
 
-    <a-entity id="containerBtnStart" mixin="hiddenMenu menuInvisible">
-
-      <a-entity id="btnStartTravelGuided" position="1.3 0.19721 -2.799" rotation="" (mouseenter)="focusObject()"
-        (click)="visitGuided()" mixin="scaleUp scaleDown"
-          animation__hidden="property: position; to: 1.3 -3 2; startEvents: visitGuided;
-            dur: 1000; easing: easeInOutCubic; autoplay: false;"
-            proxy-event="event: click; to: a-scene, #lblBanner,#btnStartTravelGuided, #containerBtnStart, #focoMenu,
-            #btnStartTravelFree, #btnExitMuseum, #btnTravelComplete, #exhibition, #historyComputer, #historyInternetSV,
-            #contentRobot, #question, #imgRobot;
-            as: visitGuided; captureBubbles: true; bubbles: true;">
-        <a-image src="#guided" position="0 0.31336 0" material="side: front" geometry="" scale="0.5 0.5 1">
+    <a-entity id="containerMenu" position="0 0 0"
+    animation__hidden="property: position; to: -0.20 -1 5; startEvents: start;
+      dur: 1000; easing: easeInOutCubic; autoplay: false;">
+      <a-image id="boton1" src="#shaderUphxEfe" position="-0.20 0.669 -2.799" material="side: front" geometry="height:1.700; width:2.800;" scale="1.40 0.75 1"
+        mixin="scaleDownCard scaleUpCard" (animationcomplete__visible)="startTravelUPH()" (mouseenter)="focusObject()" (click)="selectObject()"
+        animation__visible="property: visible; to: false; startEvents: click; easing: easeInOutCubic;
+          autoplay: false; delay: 2500;"
+        proxy-event="event: click; to: a-scene, #containerBtnStart, #lightSphere, #ligthAmbient, #ligthOff,
+          #focoRobot, #focoMenu, #containerMenu, #boton2; as: start; captureBubbles: true; bubbles: true;">
         </a-image>
-        <a-entity text="font: https://cdn.aframe.io/fonts/mozillavr.fnt; value: Visita Guiada; align: center; width: 4"
-          position="0 0.05223 0"></a-entity>
-      </a-entity>
-
-      <a-entity id="btnStartTravelFree" position="-1 0.19721 -2.799" rotation="" mixin="scaleUp scaleDown"
-        (mouseenter)="focusObject()"
-        animation__hidden="property: position; to: -2.568 -0.661 -2.799; startEvents: visitGuided;
-            dur: 1000; easing: easeInOutCubic; autoplay: false;">
-        <a-image src="#startTravel" position="0 0.31336 0" material="side: front" geometry="" scale="0.5 0.5 1">
+  
+        <a-image id="boton2" src="#shaderGeneracion" position="-0.20 -0.90 -2.799" material="side: front" geometry="height:1.700; width:2.800;" scale="1.40 0.75 1"
+        mixin="scaleDownCard scaleUpCard menuInvisible" (animationcomplete__visible)="moveCameraUser()" (mouseenter)="focusObject()" (click)="selectObject()"
+        animation__visible="property: visible; to: false; startEvents: click; easing: easeInOutCubic;
+          autoplay: false; delay: 2500;"
+        proxy-event="event: click; to: a-scene, #containerBtnStart, #lightSphere, #ligthAmbient, #ligthOff,
+          #focoRobot, #focoMenu, #containerMenu, #boton2; as: start; captureBubbles: true; bubbles: true;">
         </a-image>
-        <a-entity
-          text="font: https://cdn.aframe.io/fonts/mozillavr.fnt; value: Explorar por mi cuenta; align: center; width: 4"
-          position="0 0.05223 0"></a-entity>
-      </a-entity>
-      
-      <a-entity id="btnExitMuseum" position="-2.5 0.19721 -2.799" rotation="" mixin="scaleUp scaleDown"
-        (mouseenter)="focusObject()">
-        <a-image src="#exit" position="0 0.313 0" material="side: front" geometry="" scale="0.5 0.5 1"></a-image>
-        <a-entity text="font: https://cdn.aframe.io/fonts/mozillavr.fnt; value: Lobby; align: center; width: 4"
-          position="0 0.05223 0"></a-entity>
-      </a-entity>
-
-      <a-entity id="btnTravelComplete" position="-2.568 -3 2" rotation="" mixin="scaleUp scaleDown" visible="false"
-        (click)="startTravelFree()" (mouseenter)="focusObject()" (animationcomplete__hidden)="moveCameraUser()"
-      animation__show="property: position; to: -1 0.756 -2.799; startEvents: animationcomplete__visible;
-            dur: 1000; easing: easeInOutCubic; autoplay: false;"
-       animation__visible="property: visible; to: true; startEvents: visitGuided; easing: easeInOutCubic; autoplay: false"
-      animation__hidden="property: position; to: -2.568 -3 2; startEvents: click;
-      dur: 1000; easing: easeInOutCubic; autoplay: false; delay: 2500"
-      proxy-event="event: click; to: a-scene, #containerBtnStart, #imgRobot, #lightSphere, #ligthAmbient, #ligthOff,
-      #focoRobot, #focoMenu; as: start; captureBubbles: true; bubbles: true;">
-        <a-image src="#travelComplete" position="0 0.31336 0" material="side: front" geometry="" scale="0.5 0.5 1">
-        </a-image>
-        <a-entity
-          text="font: https://cdn.aframe.io/fonts/mozillavr.fnt; value: Recorrido Completo; align: center; width: 4"
-          position="0 0.05223 0"></a-entity>
-      </a-entity>
-
-      <a-entity id="exhibition" position="1.2 -3 2" rotation="" visible="false"
-        animation__hidden="property: position; to:0.95 0.756 -2.79 ; startEvents: animationcomplete__visible; easing:
-          easeInOutCubic; autoplay: false"
-        animation__visible="property: visible; to: true; startEvents: visitGuided; easing: easeInOutCubic;
-          autoplay: false">
-        <a-image src="#exhibitionMuseum" position="-0.65 0.31336 0" material="side: front" geometry=""
-          scale="0.5 0.5 1">
-        </a-image>
-        <a-entity
-          text="font: https://cdn.aframe.io/fonts/mozillavr.fnt; value: Exhibiciones del Museo; align: center; width: 4"
-          position="0.59 0.4 0"></a-entity>
-      </a-entity>
-
-      <a-entity id="historyComputer" position="1.2 -3 2" rotation="" mixin="scaleUp scaleDown"
-        (mouseenter)="focusObject()" visible="false"
-      animation__show="property: position; to:1.3 0.3 -2.799; startEvents: animationcomplete__visible;
-        dur: 1000; easing: easeInOutCubic; autoplay: false; delay: 1000"
-      animation__visible="property: visible; to: true; startEvents: visitGuided; easing: easeInOutCubic;
-        autoplay: false">
-        <a-image src="#computer" position="0 0.31336 0" material="side: front" geometry="" scale="0.5 0.5 1">
-        </a-image>
-        <a-entity
-          text="font: https://cdn.aframe.io/fonts/mozillavr.fnt; value: Generaciones de la Computadora; align: center; width: 4"
-          position="0 0.05223 0"></a-entity>
-      </a-entity>
-
-      <a-entity id="historyInternetSV" position="1.3 -4 2" rotation="" mixin="scaleUp scaleDown"
-      (mouseenter)="focusObject()" visible="false" (animationcomplete__hidden)="startTravelUPH()"
-      animation__show="property: position; to: 1.3 -0.8 -2.799; startEvents: animationcomplete__visible;
-            dur: 1000; easing: easeInOutCubic; autoplay: false; delay: 1000"
-      animation__visible="property: visible; to: true; startEvents: visitGuided; easing: easeInOutCubic;
-      autoplay: false"
-      animation__hidden="property: position; to: -2.568 -3 2; startEvents: click;
-      dur: 1000; easing: easeInOutCubic; autoplay: false; delay: 2500"
-      proxy-event="event: click; to: a-scene, #containerBtnStart, #imgRobot, #lightSphere, #ligthAmbient, #ligthOff,
-      #focoRobot, #focoMenu; as: start; captureBubbles: true; bubbles: true;">
-        <a-image src="#internetSV" position="0 0.31336 0" material="side: front" geometry="" scale="0.5 0.5 1">
-        </a-image>
-        <a-entity
-          text="font: https://cdn.aframe.io/fonts/mozillavr.fnt; value: Internet en El Salvador; align: center; width: 4"
-          position="0 0.05223 0"></a-entity>
-      </a-entity>
     </a-entity>
 
     <a-entity id="containerLigth" visible="false">
