--- a/angularHEFE/src/app/components/general-validations/general-validations.component.html
+++ b/angularHEFE/src/app/components/general-validations/general-validations.component.html
@@ -1,4 +1,12 @@
 <div class="login-page">
+
+  <div class="navbar-recover">
+    <nav class="navbar navbar-expand-lg ">
+      <a class="navbar-brand" routerLink="/inicio" >HIPER EFE Security system</a>
+
+      <img src="../../../assets/images/loge.svg" alt="logo">
+    </nav>
+  </div>
   <div class="general-validations">
 
     <!-- 
